# hamoopi

./: .gitignore  BUILD_STB.md  BUILD_TEST_REPORT.md  CMakeLists.txt  GAME_LOGIC_SUMMARY.md  HAMOOPI  HAMOOPI.cpp  HITBOX_SYSTEM_SUMMARY.md  IMPROVEMENTS.md  LIBRETRO_IMPLEMENTATION.md  LIBRETRO_README.md  Makefile  Makefile.libretro  PHASE2_COMPLETE.md  PHASE2_INTEGRATION_COMPLETE.md  PROJECT_STATUS.md  PR_SUMMARY.md  README-PT.md  README.md  README_LIBRETRO.md  SPRITE_ANIMATION_SUMMARY.md  SUMMARY.md  allegro_compat.cpp  allegro_compat.h  hamoopi_core.cpp  hamoopi_core.h  hamoopi_libretro.info  libretro.cpp
.github/workflows/: build.yml  cd.yml
_codeql_build_dir/: CMakeCache.txt  HAMOOPI  Makefile  cmake_install.cmake
cmake/: FindAllegro4.cmake  FindINIH.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  bundle_static_library.cmake  hamoopi.desktop.in
data/: convert-pcx-to-png.sh
docs/: ARCHITECTURE_DIAGRAM.md  BACKEND_ARCHITECTURE.md  CODE_ORGANIZATION.md  DECOUPLING_SUMMARY.md  PHASE2_INTEGRATION.md  STB_MIGRATION_PLAN.md  TIMER_OPTIMIZATION.md
src/: HAMOOPI.c  HAMOOPI.cpp  HAMOOPI.cpp.backup  Makefile.stb  allegro_audio_backend.h  allegro_graphics_backend.h  allegro_input_backend.h  allegro_system_backend.h  audio_backend.h  backend.h  backend_allegro4.c  backend_example.cpp  backend_init.cpp  backend_manager.h  backend_types.h  graphics_backend.h  hamoopi_c_backend.h  hamoopi_c_backend_allegro.c  hamoopi_collision.c  hamoopi_collision.h  hamoopi_editor.c  hamoopi_editor.h  hamoopi_globals.h  hamoopi_input.c  hamoopi_input.h  hamoopi_player.c  hamoopi_player.h  hamoopi_types.h  hamoopi_wrapper.h  input_backend.h  main.c  platform.h  platform_allegro.c  platform_compat.h  platform_libretro.c  platform_sdl2.c  stb_backend_full.c  stb_backend_init.c  stb_backend_test.c  stb_test  (+1 more)
src/backend/: platform.h  platform_allegro.c  platform_sdl2.c
src/backend/minini/: minIni.c  minIni.h
src/core/: constants.h  globals.h  initialization.h  macros.h  types.h  utils.h
src/game_loop/: char_select.c  char_select.h  donation.c  donation.h  edit.c  edit.h  intro.c  intro.h  options.c  options.h  play.c  play.h  presentation.c  presentation.h  stage_select.c  stage_select.h  versus.c  versus.h
src/modules/: collision.c  collision.h  editor.c  editor.h  input.c  input.h  player.c  player.h
tools/Font Test and Generator/: README.md
tools/Font Test and Generator/ttf2pcx-FontGenerator/: CMakeLists.txt  README_QT.md  test.sh  test_core.cpp
tools/Palette Generator/: CMakeLists.txt  PalleteGenerator.cpp
tools/pallete-generator/: CMakeLists.txt  PalleteGenerator.c  PalleteGenerator_SDL2.c  README.md  test.sh
